[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scarabu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/purple_scarabu.png" type="Texture" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://HurtBox.gd" type="Script" id=4]
[ext_resource path="res://Sprites/scarabu.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "DeadPurple",
"speed": 1.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": false,
"name": "Shell",
"speed": 1.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "ShellPurple",
"speed": 1.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "WalkPurple",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 6.125 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.5, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 3.5 )

[node name="Scarabu" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
SELECTED_COLOR = "Green"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.875 )
shape = SubResource( 6 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
position = Vector2( -10, 5 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( 11, 5 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 9 )
shape = SubResource( 7 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 2.5 )
shape = SubResource( 9 )

[node name="HitboxTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
physics_process_parent = true

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="HurtBox" to="HurtBox" method="_on_HurtBox_body_entered"]
[connection signal="timeout" from="HitboxTimer" to="." method="_on_HitboxTimer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
